# mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  contributing.md  copier.yml  h.ipynb  pyproject.toml  req_torch.txt  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  Untitled-checkpoint.ipynb
lects/: pip_pack.sh  pipx_pack.sh  versioning_pyenv.sh
test-app/: app.py  copier.yml  pyproject.toml
